# WFXM

./: .butlerignore  .butlerignore.example  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  STRUCTURE.md  butler_闭环优化规划_2026-06-09.plan.md  coverage.json  pyproject.toml
.blackboard/: README.md  log.md  state.md
.blackboard/shifts/: 2026-07-13-claude-001.md  2026-07-13-claude-code-001.md  2026-07-13-claude-code-002.md  2026-07-13-claude-code-003.md  2026-07-13-codex-001.md  2026-07-13-cursor-001.md  2026-07-14-claude-code-001.md  2026-07-14-claude-code-002.md  2026-07-14-claude-code-003.md  2026-07-14-claude-code-004.md  2026-07-15-claude-code-001.md  2026-07-16-claude-code-001.md
.blackboard/tasks/: backlog.yaml
.butler/: mcp.yaml.example  provider-presets.yaml.example  sandbox.json.example  secrets-contract.yaml
.butler/ci/: flaky-corpus-allowlist.yaml
.butler/openapi/: github-readonly.yml
.butler/routing/: network-search-routes.yaml
.butler/simulation/: wechat-dev-assistant-10-scenarios.yaml  wechat-dev-delegate-scenarios.yaml  wechat-dual-playbook-scenarios.yaml  wechat-interview-demo-scenarios.yaml  wechat-lead-readonly-scenarios.yaml  wechat-owner-demo-conversation-scenarios.yaml  wechat-owner-scenarios.yaml
.claude/: settings.json
.cursor/rules/: butler-python.mdc  butler-v4-source-of-truth.mdc
.github/workflows/: ci.yml
.wfxm_data/chromadb/: chroma.sqlite3
archive/: README.md
archive/butler-v1/: .env.example
butler/: README.md  __init__.py  agent_profiles.py  agent_profiles_ops.py  agents_md.py  agents_md_ops.py  butler_init_ops.py  config.py  config_ops.py  config_secrets.py  config_secrets_crypto.py  config_secrets_crypto_ops.py  config_secrets_ops.py  config_service.py  context_settings.py  context_settings_ops.py  dag_scheduler.py  dag_scheduler_ops.py  delegate_categories.yaml  delegate_category_resolver.py  delegate_policy.py  delegate_subagent_permissions.py  env_parse.py  execution_context.py  gate_reply_templates.py  gateway_settings.py  gateway_settings_ops.py  hermes_runtime.py  human_gate.py  human_gate_ops.py  logging_config.py  main.py  memory_plugin.py  memory_settings.py  memory_settings_ops.py  model_resolve.py  model_resolve_ops.py  orchestrator.py  paths.py  permission_approvals.py  (+29 more)
butler/agent/: context_compressor.py  subdirectory_hints.py  token_budget.py  tool_call_repair.py  tool_guardrails.py  trace_store.py  verify_loop.py
butler/blackboard/: audit.py  errors.py  handoff.py  paths.py  schema.py  shift_io.py  snapshot.py  state_io.py  sync.py  task_io.py  validator.py
butler/cli/: __init__.py  blackboard_cli.py  chat_cli.py  chat_cli_ops.py  cost_cli.py  display.py  doctor.py  doctor_sections.py  eval_cli.py  experiment_cli.py  gateway_cli.py  mcp_catalog_cli.py  mcp_cli.py  memory_cli.py  memory_cli_ops.py  onboard_cli.py  projects_cli.py  prompt_eval_cli.py  provider_presets_cli.py  registry_cli.py  runtime_cli.py  secrets_cli.py  session_ui.py  sessions_cli.py  skills_registry.py  skills_registry_ops.py  slash_commands.py  slash_dispatch.py  slash_dispatch_ops.py  spinner.py  stream.py  transcript_cli.py  workflow_cli.py
butler/contracts/: README.md  __init__.py  approval_ports.py  approval_registry.py  approval_store_impl.py  bridge_access.py  compaction_ports.py  completion_ports.py  completion_registry.py  context_transform_ports.py  dev_context_ports.py  dev_state_ports.py  eval_ports.py  events.py  gateway_registry.py  memory_ports.py  (+17 more)
data/: seed_experiences.json  seed_owner_experiences.json
docs/: DOCUMENTATION.md  README.md  design.md  hermes-extraction-map.md  manual-test-guide.md  manual-testing-guide.md  v1-vs-v2-comparison.md  v1-vs-v3-comparison.md  v3-architecture-comparison.md  v4-architecture.md
knowledge_import/: README.md
projects/: README.md
scripts/: README.md  apply-butler-env-profile.py  backup-butler-data.sh  build_reference_strict_catalog.py  builtin-tool-orthogonality-lint.sh  butler-agent-eval-weekly.sh  butler-b9-export-curriculum.sh  butler-b9-release-gate.sh  butler-b9-weekly-gate-followup.sh  butler-b9-weekly-learning.sh  butler-capability-baseline.sh  butler-cc-harness-gate.sh  butler-coding-strict-opt-in.sh  butler-coding-strict-pilot-multi.sh  butler-coding-strict-pilot-smoke.sh  butler-coding-strict-pilot.sh  butler-compaction-audit-sample.sh  butler-compaction-live-test.sh  butler-complexity-report.sh  butler-context-compaction-smoke.sh  butler-cost-calibration.sh  butler-delegate-failure-promote-demo.sh  butler-delegate-failure-promote.sh  butler-delegate-failure-review.sh  butler-delegation-boundary-smoke.sh  butler-demo-lead-smoke.sh  butler-demo-pilot-smoke.sh  butler-deploy.sh  butler-dev-delegate-experience-probe.sh  butler-dev-delegate-smoke.sh  butler-dev-flywheel-monthly.sh  butler-dev-live-flywheel-checklist.sh  butler-dev-prod-evidence-checklist.sh  butler-dev-tools-smoke.sh  butler-domain-pytest.sh  butler-dot-lite-smoke.sh  butler-eng-domain-gate.sh  butler-eval-assistant-health.sh  butler-eval-b9-live.sh  butler-eval-b9-probe-model.sh  (+186 more)
tests/: README.md  cli_harness.py  conftest.py  corpus_harness.py  layer_import_rules.py  test_agent_loop.py  test_agent_loop_layering.py  test_agent_loop_phase_split.py  test_agent_profiles.py  test_assistant_health.py  test_async_delegate.py  test_async_runner_graceful_shutdown_r5_13.py  test_auxiliary_client.py  test_auxiliary_settings.py  test_b9_curriculum_skills.py  test_b9_delegate_gate.py  test_b9_experience_retrieval.py  test_b9_harness_audit.py  test_b9_lessons.py  test_b9_live_fixed_tasks.py  test_b9_live_followups.py  test_b9_live_tuning.py  test_b9_oracle_curriculum.py  test_b9_oracle_fewshot.py  test_b9_probe_model.py  test_b9_prod_promoted_registry.py  test_b9_prod_weekly.py  test_b9_tiers.py  test_batch_sequence_guard.py  test_best_effort.py  test_boundary_observability.py  test_bundled_skills_seed.py  test_butler_config.py  test_butler_env_sync.py  test_butler_memory.py  test_butler_orchestrator.py  test_butler_skills.py  test_butler_v3.py  test_butler_v4.py  test_butlerignore.py  (+575 more)
(+4060 files in other folders)
