[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "butler-system"
version = "4.0.0"
description = "Butler AI 管家系统 v4 - 自建 Agent Loop 的多项目 AI 协助平台"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "openai>=2.21.0,<3",
  "anthropic>=0.39.0,<1",
  "python-dotenv>=1.2.1,<2",
  "httpx[socks]>=0.28.1,<1",
  "rich>=14.3.3,<15",
  "tenacity>=9.1.4,<10",
  "pyyaml>=6.0.2,<7",
  "requests>=2.33.0,<3",
  "jinja2>=3.1.5,<4",
  "pydantic>=2.12.5,<3",
  "prompt_toolkit>=3.0.52,<4",
  "croniter>=6.0.0,<7",
  "PyJWT[crypto]>=2.12.0,<3",
  "tzdata>=2023.3; sys_platform == 'win32'",
  "psutil>=5.9.0,<8",
  "jieba>=0.42,<1",
  "aiosqlite>=0.20,<1",
]

[project.optional-dependencies]
wechat = ["aiohttp>=3.13.4,<4", "certifi", "qrcode>=7.0", "cryptography"]
wechat-ocr = ["pytesseract>=0.3.10,<1", "pillow>=12.2.0,<13"]
dev = ["debugpy>=1.8.0,<2", "pytest>=9.0.2,<10", "pytest-asyncio>=1.3.0,<2", "pytest-cov>=6.0,<7", "ruff"]
mcp = ["mcp>=1.2,<2"]
cli = ["simple-term-menu>=1.0,<2"]
voice = ["faster-whisper>=1.0.0,<2", "sounddevice>=0.4.6,<1", "numpy>=1.24.0,<3"]
pty = ["ptyprocess>=0.7.0,<1; sys_platform != 'win32'", "pywinpty>=2.0.0,<3; sys_platform == 'win32'"]
tokens = ["tiktoken>=0.7,<1"]
embeddings = ["fastembed>=0.8.0,<1"]
documents = ["markitdown[pdf,docx,xlsx,pptx]>=0.3,<1"]
web = ["trafilatura>=2.0,<3"]
notify = ["apprise>=1.9,<2"]
analytics = ["duckdb>=1.1,<2"]
vectors = ["chromadb>=0.6,<1"]
observability = ["langfuse>=2.0,<3"]
gateway = [
  "butler-system[wechat]",
  "butler-system[mcp]",
  "butler-system[embeddings]",
  "butler-system[vectors]",
  "butler-system[web]",
]
all = [
  "butler-system[wechat]",
  "butler-system[wechat-ocr]",
  "butler-system[cli]",
  "butler-system[dev]",
  "butler-system[voice]",
  "butler-system[pty]",
  "butler-system[embeddings]",
  "butler-system[vectors]",
  "butler-system[observability]",
  "butler-system[tokens]",
]

[project.scripts]
butler = "butler.main:main"
scan-magicmock-spec = "butler.tests_policies.scan_magicmock_spec:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["butler", "butler.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive", "fixtures", ".git", "node_modules", "venv"]
markers = [
    "unit: L1 unit tests (fast, no I/O)",
    "module_test: L2 module tests (mocked I/O)",
    "integration: L3 integration tests (cross-module)",
    "e2e: L4 end-to-end tests (full pipeline)",
    "slow: tests taking > 5s",
    "live_llm: requires real LLM API key (skip in CI)",
    "corpus: corpus-driven evaluation (tests/corpus)",
    "corpus_mock: corpus tests with mocked LLM (CI)",
    "corpus_live: corpus tests with real LLM (implies live_llm)",
    "corpus_smoke: corpus live smoke subset only",
    "conversational: human-like conversational tests with real LLM (implies live_llm)",
    "live_vlm: requires real MiniMax VLM API (image recognition tests)",
    "live_multimodal: requires real MiniMax multimodal API (image gen / TTS tests)",
    "gateway: tests/gateway/ domain (微信网关、斜杠命令)",
    "ops: tests/ops/ domain (eval、观测、metrics)",
    "dev_engine: tests/dev_engine/ domain (VERIFY、委派验证)",
    "legacy_sprint: 历史 sprint 回归（tests/test_sprint* 根目录，待迁入域目录）",
]
addopts = "-m 'not live_llm'"
filterwarnings = [
    "ignore:pkg_resources is deprecated:UserWarning:jieba._compat",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — enforced by review, not CI
    "E402",   # module level import not at top — lazy imports are intentional
    "F811",   # redefinition of unused name — common with lazy import pattern
]

[tool.coverage.run]
source = ["butler"]
omit = [
    "butler/tools/builtin_impl.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
]
